--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -38,4 +38,66 @@ body {
 .animate-scroll {
   animation: scrollText 100s linear infinite;
 }
+ */
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'WebsiteFont'; /* Custom Font Name */
+  src: url('/fonts/website-font.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+:root {
+  --background: 245, 245, 243;
+  --foreground: 46, 46, 46;
+  --mexican-red: 169, 34, 35;
+  --pink: 212, 140, 148;
+  --teal-blue: 30, 61, 93;
+  --new-gray: 239, 240, 243;
+  --button-font-color: 102, 16, 242;
+  --light-gray: 239, 240, 243;
+
+  --font-custom: 'WebsiteFont', sans-serif; /* Only using this font */
+}
+
+body {
+  font-family: var(--font-custom);
+  background-color: rgb(var(--light-gray));
+  color: rgb(var(--foreground));
+}
+
+@keyframes scrollText {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-scroll {
+  animation: scrollText 100s linear infinite;
+}
